# mrc-hackathon

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dev/: app.py  meningitis_data_cleaned.csv  model2.ipynb  test.ipynb  test2.ipynb  xboost.ipynb  xgboost.ipynb
